# rust-query-builder

./: .env.example  Cargo.toml  README.md
src/: config.rs  error.rs  main.rs
src/ai/: gemini.rs
src/db/: connection.rs  mod.rs  repository.rs
src/models/: order.rs
src/services/: mod.rs  query_service.rs
